--- a/alephuba/templates/index.html
+++ b/alephuba/templates/index.html
@@ -1,1 +1,17 @@
 {% extends 'base.html' %}
+
+{% block content %}
+<p>Hola universo!</p>
+{% endblock %}
+
+{% block sidebar %}
+<ul class="sideNav">
+	<li><a href="#">Exchange</a></li>
+	<li><a href="#" class="active">Print resources</a></li>
+	<li><a href="#">Training &amp; Support</a></li>
+	<li><a href="#">Books</a></li>
+	<li><a href="#">Safari books online</a></li>
+	<li><a href="#">Events</a></li>
+</ul>
+<!-- // .sideNav -->
+{% endblock %}
