--- a/alephuba/media/css/layout.css
+++ b/alephuba/media/css/layout.css
@@ -119,7 +119,7 @@ h1 span { display: none; }
 
 /* Breadcrumb ---------------------------------------- */
 
-h2 {
+.breadcrumb {
 	width: 718px;
 	float: right;
 	color: #646464;
@@ -131,21 +131,21 @@ h2 {
 	border-bottom: 1px solid #ddd;
 }
 
-h2 a {
+.breadcrumb a {
 	color: #646464;
 	text-decoration: none;
 }
 
-h2 a.active { color: #c66653; }
+.breadcrumb a.active { color: #c66653; }
 
-h2 a:hover { text-decoration: underline; }
+.breadcrumb a:hover { text-decoration: underline; }
 
 /* Content ---------------------------------------- */
 
 #main {
 	width: 700px;
 	float: right;
-	padding: 0 19px 0 0;
+	padding: 0 19px 20px 0;
 }
 
 h3 {
@@ -264,6 +264,12 @@ h3 {
 	border: none;
 	background: url(../img/button-submit.gif) no-repeat left top;
 }
+
+#main .text p{
+	padding: 5px 7px;
+	margin: 0 10px 0 15px;
+	line-height: 1.2;
+	}
 
 /* Footer ---------------------------------------- */
 
