--- a/alephuba/templates/base.html
+++ b/alephuba/templates/base.html
@@ -29,7 +29,7 @@
         <!-- You can name the links with lowercase, they will be transformed to uppercase by CSS, we prefered to name them with uppercase to have the same effect with disabled stylesheet -->
         <ul id="mainNav">
         	<li><a href="#" class="active">Home</a></li> <!-- Use the "active" class for the active menu item  -->
-        	<li><a href="#">Buscar documento</a></li>
+        	<li><a href="{% url documentos %}">Buscar documento</a></li>
         	<li><a href="#">Subir documento</a></li>
         	<li><a href="#">Mi cuenta</a></li>
         	{% if user.is_staff %}<li><a href="{% url admin:index %}">Administración</a></li>{% endif %}
@@ -91,7 +91,7 @@
                         </table>
 					<h3>Another section</h3>
                     	<fieldset>
-                        	<p><label>Sample label:</label><input type="text" class="text-long" /></p>
+                        	<p><label>Sample label:</label><input type="text" class="text-long" /></p><br/>
                         	<p><label>Sample label:</label><input type="text" class="text-medium" /><input type="text" class="text-small" /><input type="text" class="text-small" /></p>
                             <p><label>Sample label:</label>
                             <select>
