--- a/alephuba/templates/index.html
+++ b/alephuba/templates/index.html
@@ -12,22 +12,12 @@
 </div>
 {% endblock %}
 
-{% block sidebar %}
-<ul class="sideNav">
-	<li><a href="#">Exchange</a></li>
-	<li><a href="#" class="active">Print resources</a></li>
-	<li><a href="#">Training &amp; Support</a></li>
-	<li><a href="#">Books</a></li>
-	<li><a href="#">Safari books online</a></li>
-	<li><a href="#">Events</a></li>
-</ul>
-<!-- // .sideNav -->
-{% endblock %}
+{% block sidebar %}{% endblock %}
 
 {% load breadcrumbs %}
 
 {% block breadcrumbs %}
 	{{ block.super }}
-	{% breadcrumb_url 'Home' home %}	
+	{% breadcrumb_url 'Actividad reciente' home %}	
 {% endblock %}
 
