Login y logout implementado. Mejora en el template base.

--- a/alephuba/templates/registracion.html
+++ b/alephuba/templates/registracion.html
@@ -1,14 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}Registration{% endblock %}
-
 {% block content %}
 
-	<h1>Registration</h1>
+	<h1>Registrate:</h1>
 
 	<form action="" method="post">{% csrf_token %}
 		{{ form.as_p }}
-		<input type="submit" value="Create account">
+		<input type="submit" value="Enviar">
 	</form>
 
 {% endblock %}
