Mejora estetica en los formularios.

--- a/alephuba/templates/base.html
+++ b/alephuba/templates/base.html
@@ -40,7 +40,7 @@
         <ul id="mainNav">
         	<li><a href="{% url home %}" class="active">Home</a></li>
         	<li class="login"><a href="{% url login %}">Login</a></li>
-        	<li><a href="{% url registracion %}">Registrate</a></li>
+        	<li><a href="{% url registracion %}">Regístrate</a></li>
         </ul>
         
         {% endif %}
