--- a/alephuba/templates/registracion.html
+++ b/alephuba/templates/registracion.html
@@ -2,11 +2,13 @@
 
 {% block content %}
 
-	<h1>Registrate:</h1>
+	<h3>Regístrate:</h3>
 
 	<form action="" method="post">{% csrf_token %}
-		{{ form.as_p }}
-		<input type="submit" value="Enviar">
+		<fieldset>
+			{{ form.as_p }}
+			<input type="submit" value="Enviar">
+		</fieldset>
 	</form>
 
 {% endblock %}
