--- a/alephuba/templates/base.html
+++ b/alephuba/templates/base.html
@@ -22,7 +22,7 @@
 <body>
 	<div id="wrapper">
     	<!-- h1 tag stays for the logo, you can use the a tag for linking the index page -->
-    	<h1><a href="{% url home %}">Aleph UBA</a></h1>
+    	<h1><a href="{% url home %}">aleph uba</a></h1>
         
         {% block nav %}
         {% if user.is_authenticated %}
