--- a/alephuba/templates/registracion.html
+++ b/alephuba/templates/registracion.html
@@ -4,12 +4,6 @@
 
 	<h3>Regístrate:</h3>
 	
-	<form action="" method="post"  class="jNice">{% csrf_token %}
-   	<fieldset>
-		{{ form.as_p }}
-		{{ p_form.as_p }}
-		<input type="submit" value="{{ submit_value|default:'Enviar'}}">
-	</fieldset>
-</form>
+	{% include 'form.html' %}
 
 {% endblock %}
