Limpieza de codigo duplicado.

--- a/alephuba/templates/documento.html
+++ b/alephuba/templates/documento.html
@@ -38,28 +38,6 @@
 
 <h3>Agregue un comentario:</h3>
 
-<form action="{% comment_form_target %}" method="post" class="jNice"> {% csrf_token %}
-	<fieldset>
-		{% for field in form %}
-    		{% if field.is_hidden %}
-        		{{ field }}
-        	{% else %}
-            	{% if field.name == "comment" or field.name == "honeypot" %}
-            		{% if field.errors %}
-	                	{{ field.errors }}
-    	            {% endif %}
-                   	
-                   	<p
-                   	{% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
-                   	
-        	        {{ field.label_tag }} {{ field }}</p>
-            	{% endif %}
-        	{% endif %}
-     	{% endfor %}
-        
-     	<input type="hidden" name="next" value="{% url documento documento.pk %}">
-		<input class="submit-post" name="post" type="submit" value="Enviar">
-	</fieldset>
-</form>
+{% include 'comments/form_add_comment.html' with next=request.path %}
 
 {% endblock %}
