--- a/alephuba/templates/comments/preview.html
+++ b/alephuba/templates/comments/preview.html
@@ -1,34 +1,9 @@
 {% extends "base.html" %}
 
+{% load comments %}
+
 {% block content %}
-  {% load comments %}
-  <form action="{% comment_form_target %}" method="post" class="jNice">{% csrf_token %}
-  	<fieldset>
-    	{% if next %}<div><input type="hidden" name="next" value="{{ next }}" /></div>{% endif %}
-    	{% if form.errors %}
-    		<h3>Por favor corregi los siguientes errores:</h3>
-    	{% endif %}
-    	
-    	{% for field in form %}
-      		{% if field.is_hidden %}
-      			<div>{{ field }}</div>
-      		{% else %}        
-        		{% if field.name == "comment" or field.name == "honeypot" %}
-            		{% if field.errors %}
-	                	{{ field.errors }}
-    	            {% endif %}
-                   	
-                   	<p
-                   	{% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
-                   	
-        	        {{ field.label_tag }} {{ field }}</p>
-            	{% endif %}
-      		{% endif %}
-    	{% endfor %}
+  
+  {% include 'comments/form_add_comment.html' %}
     
-    	<p class="submit">
-    	<input type="submit" name="submit" class="submit-post" value="Enviar" />
-    	</p>
-    </fieldset>
-  </form>
 {% endblock %}
