--- a/alephuba/templates/documento_list.html
+++ b/alephuba/templates/documento_list.html
@@ -10,6 +10,11 @@
 {% endblock %}
 
 {% block content %}
+<h3>Búsqueda rápida</h3>
+{% with submit_value='Buscar' method='get' %}
+	{% include 'form.html' %}
+{% endwith %}
+
 <h3>Documentos</h3>
 <table cellpadding="0" cellspacing="0">
     {% for documento in object_list %}
@@ -17,7 +22,7 @@
 	{% endfor %}
 	
 	<tr><td id="paginator">
-		{{ page_obj.start_index }} - {{ page_obj.end_index }} de {{ paginator.count }} documento{{ paginator.count|pluralize }} |
+		{{ page_obj.start_index }} - {{ page_obj.end_index }} de {{ paginator.count }} documento{{ paginator.count|pluralize }} {% if page_obj.has_other_pages %}|{% endif %}
 		
 		{% if page_obj.has_previous %}<a href="./?{{ request.GET.urlencode }}&page=1">&lt;&lt;</a>{% endif %}
 		{% if page_obj.has_previous %}<a href="./?{{ request.GET.urlencode }}&page={{ page_obj.previous_page_number }}">previa</a>{% endif %}
