--- a/alephuba/templates/form.html
+++ b/alephuba/templates/form.html
@@ -1,4 +1,4 @@
-<form action="" method="post">{% csrf_token %}
+<form action="" method="{{ method|default:'post' }}">{% csrf_token %}
    	<fieldset>
 		
 		{% if form.errors %}<span class="form_error">Por favor, corrija los errores indicados.</span>{% endif %}
