--- a/alephuba/templates/base.html
+++ b/alephuba/templates/base.html
@@ -8,8 +8,13 @@
 
 <!-- CSS -->
 <link href="{{ MEDIA_URL }}css/transdmin.css" rel="stylesheet" type="text/css" media="screen" />
+<link href="{{ MEDIA_URL }}css/jquery.ui.all.css" rel="stylesheet" type="text/css" media="screen"">
 
-
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-ui.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.ui.core.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.ui.widget.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.ui.position.js"></script>
 
 {% block extra_head %}{% endblock %}
 </head>
