--- a/alephuba/templates/documentos/documento_list.html
+++ b/alephuba/templates/documentos/documento_list.html
@@ -12,13 +12,22 @@
 </script>
 {% endblock %}
 
+{% block sidebar %}
+	<ul class="sideNav">
+	   	<li><a href="#">Por materia</a></li>
+	   	<li><a class="active" href="#">Más recientes</a></li>
+	   	<li><a href="#">Más populares</a></li>
+	   	<li><a href="#">Búsqueda avanzada</a></li>
+	</ul>
+{% endblock %}
+
 {% block content %}
 <h3>Búsqueda rápida</h3>
 {% with submit_value='Buscar' method='get' %}
 	{% include 'form.html' %}
 {% endwith %}
 
-<h3>Documentos</h3>
+<h3>Documentos recientes</h3>
 <table cellpadding="0" cellspacing="0">
     {% for documento in object_list %}
 		<tr {% cycle '' 'class="odd"' %}><td><a href="{% url documento documento.pk %}"><b>{{ documento.titulo }}</b></a>, {{ documento.autor }}</td></tr>
