--- a/alephuba/templates/base.html
+++ b/alephuba/templates/base.html
@@ -8,12 +8,30 @@
 
 <!-- CSS -->
 <link href="{{ MEDIA_URL }}css/transdmin.css" rel="stylesheet" type="text/css" media="screen" />
-<link href="{{ MEDIA_URL }}css/jquery.ui.all.css" rel="stylesheet" type="text/css" media="screen"">
+<link type="text/css" href="{{ MEDIA_URL }}css/custom-theme/jquery-ui-1.8.6.custom.css" rel="stylesheet" />
 
-<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.js"></script>
-<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-ui.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-ui-1.8.6.custom.min.js"></script>
 
 {% block extra_head %}{% endblock %}
+
+{% if user.is_authenticated %}
+<script>
+	$(function() {
+
+		$( "#id_qs_documento" ).autocomplete({
+			source: "{% url autocomplete_documento %}",
+			minLength:2,
+			select: function(event, ui){
+				$(this).val(ui.item.value);
+				$('#qs_form').submit();
+			}
+		});
+	});
+</script>
+{% endif %}
+
+
 </head>
 
 <body>
@@ -32,6 +50,7 @@
         <ul id="mainNav">
         	<li><a href="{% url documentos %}">Buscar documento</a></li>
         	<li><a href="{% url add_documento %}">Subir documento</a></li>
+        	<li class="quicksearch"><form id="qs_form" method="get" action="{% url documentos %}"><label for="id_{{ qs_form.qs_documento.name }}">Buscar:</label>{{ qs_form.qs_documento }}</form></li>
         </ul>
         
         {% endif %}
