--- a/alephuba/templates/index.html
+++ b/alephuba/templates/index.html
@@ -29,7 +29,7 @@
 	{% endwith %}
 	
 	<div class="text">
-		<p><a href="{% url registracion %}">No estas registrado?</a></p>
+		<p><a href="{% url registracion %}">¿No estas registrado?</a></p>
 	 </div>
 {% endif %}
 {% endblock %}
